--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,22 @@ body {
     height: auto;
     max-height: 300px;
   }
+
+  .badge{
+    left: 5px;
+  }
+
+  .product-info{
+    margin-left: 9px;
+  }
+
+  .price{
+    margin-left: 9px;
+  }
+
+  .btn {
+    width: 99%;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
